# xcsh

./: .editorconfig  .gitignore  .golangci.yml  .goreleaser.yaml  .markdownlint.yaml  .pre-commit-config.yaml  .semrelrc  .yamllint.yaml  CHANGELOG.md  Makefile  README.md  branding.mk  eslint.config.js  go.mod  go.sum  install.sh  main.go  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements-docs.txt  test.sh  tsconfig.json  tsup.config.ts  validation-report.md  vitest.config.ts
.serena/: project.yml
.specs/: CHANGELOG.md  README.md
claudedocs/: phase6_performance_analysis.md
cmd/: api_endpoint.go  api_endpoint_control.go  api_endpoint_discover.go  cloudstatus.go  cloudstatus_completion.go  cloudstatus_components.go  cloudstatus_incidents.go  cloudstatus_maintenance.go  cloudstatus_pops.go  cloudstatus_status.go  cloudstatus_summary.go  cloudstatus_watch.go  completion.go  config_helpers.go  configuration.go  configure.go  cross_feature_validation_test.go  domains.go  domains_category_test.go  domains_completion.go  domains_completion_test.go  envvars.go  help_templates.go  helpers.go  integration_test.go  login.go  preview_warnings_test.go  repl.go  repl_banner.go  repl_completer.go  repl_executor.go  repl_history.go  repl_prompt.go  repl_session.go  request.go  request_cmdseq.go  request_rpc.go  request_rpc_generated.go  request_secrets.go  resource.go  (+15 more)
completions/: _xcsh  xcsh.bash  xcsh.fish
config/: custom-domain-descriptions.yaml
docs/: api_reference.md  index.md  user_guide.md
examples/: http-lb-minimal.yaml  https-lb-autocert.yaml  (+1 more)
(+957 files in other folders)
